# Aurora-Font

./: .gitignore  .gitmodules  Cargo.toml  README.md
src/: error.rs  lib.rs
src/common/: decode.rs  mod.rs  snft.rs
src/decompress/: mod.rs
src/io/: endian.rs  file.rs  mod.rs  stream.rs
src/optional/: builtin.rs  decode.rs  mod.rs  sink.rs
src/tags/: script.rs
tests/: basic.rs  sfnt.rs
