[package]
name = "aurora-font"
version = "0.1.0"
authors = ["Colton McGraw <github.com/ColtMcG1>"]
edition = "2024"
description = "A font parsing library."
license = "Apache-2.0"
repository = "github.com/ColtMcG1/Aurora-Font"

[dependencies]
rayon = { version = "1.7", optional = true }

[features]
# Full version has high-level convenience APIs (decode into built-in `Font`, sinks, helpers)
# Disabled by default to keep the core minimal and lightweight.
full = []
# Enable parallel checksum validation (optional, enables `rayon`)
parallel = ["rayon"]